crates/oxc_css_parser/tests/error/scss/at-rule/forward/empty.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: string is expected
  ┌─ empty.scss:1:9
  │
1 │ @forward;
  │         ^


